--- a/package.json
+++ b/package.json
@@ -27,6 +27,7 @@
     "classnames": "^2.5.1",
     "react": "^18.2.0",
     "react-alice-carousel": "^2.9.1",
+    "react-calendly": "^4.3.0",
     "react-dom": "^18.2.0",
     "react-responsive-carousel": "^3.2.23",
     "react-router-dom": "^6.22.3",
