--- a/package.json
+++ b/package.json
@@ -29,6 +29,7 @@
     "react-alice-carousel": "^2.9.1",
     "react-calendly": "^4.3.0",
     "react-dom": "^18.2.0",
+    "react-dropzone": "^14.2.3",
     "react-hook-form": "^7.51.4",
     "react-phone-input-2": "^2.15.1",
     "react-responsive-carousel": "^3.2.23",
