--- a/package.json
+++ b/package.json
@@ -26,6 +26,7 @@
   "dependencies": {
     "@hookform/resolvers": "^3.3.4",
     "audit-ci": "^6.6.1",
+    "axios": "^1.7.2",
     "classnames": "^2.5.1",
     "react": "^18.2.0",
     "react-alice-carousel": "^2.9.1",
