--- a/package.json
+++ b/package.json
@@ -35,16 +35,18 @@
     "react-helmet": "^6.1.0",
     "react-hook-form": "^7.51.4",
     "react-phone-input-2": "^2.15.1",
-    "react-responsive-carousel": "^3.2.23",
     "react-router-dom": "^6.22.3",
     "react-router-hash-link": "^2.4.3",
     "react-toastify": "^10.0.5",
     "tailwind-merge": "^2.2.2",
+    "vite-bundle-visualizer": "^1.2.1",
+    "vite-plugin-inspect": "^0.8.7",
     "vite-plugin-svgr": "^4.2.0",
     "vite-tsconfig-paths": "^4.3.2",
     "yup": "^1.4.0"
   },
   "devDependencies": {
+    "@fullhuman/postcss-purgecss": "^6.0.0",
     "@trivago/prettier-plugin-sort-imports": "^4.3.0",
     "@types/react": "^18.2.66",
     "@types/react-dom": "^18.2.22",
@@ -64,6 +66,8 @@
     "sass": "^1.75.0",
     "tailwindcss": "^3.4.4",
     "typescript": "^5.2.2",
-    "vite": "^5.2.0"
+    "vite": "^5.2.0",
+    "vite-plugin-compression": "^0.5.1",
+    "vite-plugin-html": "^3.2.2"
   }
 }
