--- a/package.json
+++ b/package.json
@@ -38,6 +38,7 @@
     "react-router-dom": "^6.22.3",
     "react-router-hash-link": "^2.4.3",
     "react-toastify": "^10.0.5",
+    "rollup": "^4.22.4",
     "tailwind-merge": "^2.2.2",
     "vite-bundle-visualizer": "^1.2.1",
     "vite-plugin-inspect": "^0.8.7",
