--- a/package.json
+++ b/package.json
@@ -28,10 +28,13 @@
     "audit-ci": "^6.6.1",
     "axios": "^1.7.2",
     "classnames": "^2.5.1",
-    "react": "^18.2.0",
+    "draft-js": "^0.11.7",
+    "draftjs-to-html": "^0.9.1",
+    "react": "^18.3.1",
     "react-alice-carousel": "^2.9.1",
     "react-calendly": "^4.3.0",
-    "react-dom": "^18.2.0",
+    "react-dom": "^18.3.1",
+    "react-draft-wysiwyg": "^1.15.0",
     "react-helmet": "^6.1.0",
     "react-hook-form": "^7.51.4",
     "react-phone-input-2": "^2.15.1",
@@ -48,8 +51,11 @@
   "devDependencies": {
     "@fullhuman/postcss-purgecss": "^6.0.0",
     "@trivago/prettier-plugin-sort-imports": "^4.3.0",
+    "@types/draft-js": "^0.11.18",
+    "@types/draftjs-to-html": "^0.8.4",
     "@types/react": "^18.2.66",
     "@types/react-dom": "^18.2.22",
+    "@types/react-draft-wysiwyg": "^1.13.8",
     "@types/react-helmet": "^6.1.11",
     "@types/react-router-hash-link": "^2.4.9",
     "@typescript-eslint/eslint-plugin": "^7.13.0",
