--- a/package.json
+++ b/package.json
@@ -65,7 +65,7 @@
     "prettier": "3.2.5",
     "sass": "^1.75.0",
     "tailwindcss": "^3.4.4",
-    "typescript": "^5.2.2",
+    "typescript": "5.5.4",
     "vite": "^5.2.0",
     "vite-plugin-compression": "^0.5.1",
     "vite-plugin-html": "^3.2.2"
