--- a/package.json
+++ b/package.json
@@ -68,6 +68,7 @@
     "typescript": "^5.2.2",
     "vite": "^5.2.0",
     "vite-plugin-compression": "^0.5.1",
-    "vite-plugin-html": "^3.2.2"
+    "vite-plugin-html": "^3.2.2",
+    "vite-plugin-sitemap": "^0.7.1"
   }
 }
