--- a/.github/workflows/build.yml
+++ b/.github/workflows/build.yml
@@ -1,5 +1,6 @@
 name: Build
 run-name: ${{ github.workflow }}-${{ github.actor }}
+
 on:
   push:
     branches:
@@ -11,16 +12,21 @@ on:
 jobs:
   build:
     runs-on: ubuntu-latest
+
     steps:
-      - uses: actions/checkout@v3
-      - uses: actions/setup-node@v3
+      - name: Checkout Repository
+        uses: actions/checkout@v3
+
+      - name: Setup Node.js
+        uses: actions/setup-node@v3
         with:
           node-version: "20"
-      - uses: actions/checkout@v3
-        with:
-          version: 6.0.2
+
+      - name: Clear Node.js Cache
+        run: yarn cache clean
+
       - name: Install Dependencies
-        run: yarn
+        run: yarn install
 
       - name: Build
         run: yarn build
