--- a/package.json
+++ b/package.json
@@ -40,6 +40,7 @@
     "react-phone-input-2": "^2.15.1",
     "react-router-dom": "^6.22.3",
     "react-router-hash-link": "^2.4.3",
+    "react-share": "^5.1.0",
     "react-toastify": "^10.0.5",
     "tailwind-merge": "^2.2.2",
     "vite-bundle-visualizer": "^1.2.1",
