--- a/package.json
+++ b/package.json
@@ -30,6 +30,7 @@
     "classnames": "^2.5.1",
     "draft-js": "^0.11.7",
     "draftjs-to-html": "^0.9.1",
+    "html-to-draftjs": "^1.5.0",
     "react": "^18.3.1",
     "react-alice-carousel": "^2.9.1",
     "react-calendly": "^4.3.0",
@@ -54,6 +55,7 @@
     "@trivago/prettier-plugin-sort-imports": "^4.3.0",
     "@types/draft-js": "^0.11.18",
     "@types/draftjs-to-html": "^0.8.4",
+    "@types/html-to-draftjs": "^1.4.3",
     "@types/react": "^18.2.66",
     "@types/react-dom": "^18.2.22",
     "@types/react-draft-wysiwyg": "^1.13.8",
