fix : changed rich text editor to tinymce , add metadesc field in blog page

--- a/package.json
+++ b/package.json
@@ -25,22 +25,20 @@
   },
   "dependencies": {
     "@hookform/resolvers": "^3.3.4",
+    "@tinymce/tinymce-react": "^5.1.1",
     "audit-ci": "^6.6.1",
     "axios": "^1.7.2",
     "classnames": "^2.5.1",
-    "draft-js": "^0.11.7",
-    "draftjs-to-html": "^0.9.1",
-    "html-to-draftjs": "^1.5.0",
     "react": "^18.3.1",
     "react-alice-carousel": "^2.9.1",
     "react-calendly": "^4.3.0",
     "react-dom": "^18.3.1",
-    "react-draft-wysiwyg": "^1.15.0",
     "react-helmet": "^6.1.0",
     "react-hook-form": "^7.51.4",
     "react-phone-input-2": "^2.15.1",
     "react-router-dom": "^6.22.3",
     "react-router-hash-link": "^2.4.3",
+    "react-shadow": "^20.5.0",
     "react-share": "^5.1.0",
     "react-toastify": "^10.0.5",
     "tailwind-merge": "^2.2.2",
@@ -54,12 +52,8 @@
     "@fullhuman/postcss-purgecss": "^6.0.0",
     "@trivago/prettier-plugin-sort-imports": "^4.3.0",
     "@types/clean-css": "^4.2.11",
-    "@types/draft-js": "^0.11.18",
-    "@types/draftjs-to-html": "^0.8.4",
-    "@types/html-to-draftjs": "^1.4.3",
     "@types/react": "^18.2.66",
     "@types/react-dom": "^18.2.22",
-    "@types/react-draft-wysiwyg": "^1.13.8",
     "@types/react-helmet": "^6.1.11",
     "@types/react-router-hash-link": "^2.4.9",
     "@typescript-eslint/eslint-plugin": "^7.13.0",
