--- a/package.json
+++ b/package.json
@@ -25,6 +25,7 @@
   },
   "dependencies": {
     "@hookform/resolvers": "^3.3.4",
+    "@tanstack/react-query": "^5.59.15",
     "@tinymce/tinymce-react": "^5.1.1",
     "audit-ci": "^6.6.1",
     "axios": "^1.7.2",
@@ -35,6 +36,7 @@
     "react-dom": "^18.3.1",
     "react-helmet": "^6.1.0",
     "react-hook-form": "^7.51.4",
+    "react-modal": "^3.16.1",
     "react-phone-input-2": "^2.15.1",
     "react-router-dom": "^6.22.3",
     "react-router-hash-link": "^2.4.3",
@@ -55,6 +57,7 @@
     "@types/react": "^18.2.66",
     "@types/react-dom": "^18.2.22",
     "@types/react-helmet": "^6.1.11",
+    "@types/react-modal": "^3.16.3",
     "@types/react-router-hash-link": "^2.4.9",
     "@typescript-eslint/eslint-plugin": "^7.13.0",
     "@typescript-eslint/parser": "^7.2.0",
