--- a/vercel.json
+++ b/vercel.json
@@ -1,3 +1,15 @@
 {
-  "rewrites": [{ "source": "/(.*)", "destination": "/" }]
+  "rewrites": [{ "source": "/sitemap.xml", "destination": "/api/generate-sitemap" }],
+  "functions": {
+    "api/generate-sitemap.js": {
+      "memory": 1024,
+      "maxDuration": 10
+    }
+  },
+  "crons": [
+    {
+      "path": "/api/generate-sitemap",
+      "schedule": "09 16 * * *"
+    }
+  ]
 }
