--- a/tsconfig.node.json
+++ b/tsconfig.node.json
@@ -7,5 +7,5 @@
     "allowSyntheticDefaultImports": true,
     "strict": true
   },
-  "include": ["vite.config.ts", "api/**/*", "src/**/*"]
+  "include": ["vite.config.ts", "src/api/generateSitemap.ts"]
 }
