--- a/tsconfig.json
+++ b/tsconfig.json
@@ -2,12 +2,7 @@
   "compilerOptions": {
     "target": "ES2020",
     "useDefineForClassFields": true,
-    "lib": [
-      "ES2020",
-      "DOM",
-      "DOM.Iterable",
-      "dom"
-    ],
+    "lib": ["ES2020", "DOM", "DOM.Iterable", "dom"],
     "module": "ESNext",
     "skipLibCheck": true,
 
@@ -20,7 +15,7 @@
     "jsx": "react-jsx",
     "baseUrl": "./src",
     "paths": {
-      "@/*": ["*"],
+      "@/*": ["*"]
     },
     /* Linting */
     "strict": true,
@@ -28,6 +23,6 @@
     "noUnusedParameters": true,
     "noFallthroughCasesInSwitch": true
   },
-  "include": ["src"],
+  "include": ["src", "api"],
   "references": [{ "path": "./tsconfig.node.json" }]
 }
