--- a/vercel.json
+++ b/vercel.json
@@ -1,7 +1,7 @@
 {
-  "rewrites": [{ "source": "/sitemap.xml", "destination": "/api/generate-sitemap" }],
+  "rewrites": [{ "source": "/sitemap.xml", "destination": "/src/utils/generate-sitemap.ts" }],
   "functions": {
-    "api/generate-sitemap.js": {
+    "src/utils/generate-sitemap.ts": {
       "memory": 1024,
       "maxDuration": 10
     }
