--- a/vercel.json
+++ b/vercel.json
@@ -1,15 +1,6 @@
 {
   "rewrites": [{ "source": "/sitemap.xml", "destination": "/api/generateSitemap" }],
   "functions": {
-    "api/generateSitemap.ts": {
-      "memory": 1024,
-      "maxDuration": 10
-    }
-  },
-  "crons": [
-    {
-      "path": "/api/generateSitemap",
-      "schedule": "00 16 * * *"
-    }
-  ]
+    "api/generateSitemap.ts": {}
+  }
 }
