--- a/package.json
+++ b/package.json
@@ -27,6 +27,7 @@
     "@hookform/resolvers": "^3.3.4",
     "@tanstack/react-query": "^5.59.15",
     "@tinymce/tinymce-react": "^5.1.1",
+    "@vercel/functions": "^1.4.2",
     "audit-ci": "^6.6.1",
     "axios": "^1.7.2",
     "classnames": "^2.5.1",
