--- a/package.json
+++ b/package.json
@@ -36,6 +36,7 @@
     "react-calendly": "^4.3.0",
     "react-dom": "^18.3.1",
     "react-helmet": "^6.1.0",
+    "react-helmet-async": "^2.0.5",
     "react-hook-form": "^7.51.4",
     "react-modal": "^3.16.1",
     "react-phone-input-2": "^2.15.1",
