--- a/package.json
+++ b/package.json
@@ -5,19 +5,13 @@
   "type": "module",
   "scripts": {
     "dev": "vite",
-    "build": "tsc && vite build && react-snap",
+    "build": "tsc && vite build",
     "lint": "eslint . --ext ts,tsx --report-unused-disable-directives --max-warnings 0",
     "format": "prettier --write \"src/**/*.ts\" \"src/**/*.tsx\"",
     "preview": "vite preview",
     "precommit": "lint-staged",
     "prepare": "husky install",
     "audit": "yarn run audit-ci --config ./audit-ci.json"
-  },
-  "reactSnap": {
-    "inlineCss": true,
-    "source": "dist",
-    "destination": "dist",
-    "crawl": true
   },
   "lint-staged": {
     "**/*": [
@@ -78,7 +72,6 @@
     "lint-staged": "^15.2.5",
     "postcss": "^8.4.38",
     "prettier": "3.2.5",
-    "react-snap": "^1.23.0",
     "sass": "^1.75.0",
     "tailwindcss": "^3.4.4",
     "typescript": "5.5.4",
