--- a/vercel.json
+++ b/vercel.json
@@ -14,6 +14,24 @@
   },
   "headers": [
     {
+      "source": "/assets/(.*).js",
+      "headers": [
+        {
+          "key": "Content-Type",
+          "value": "text/javascript"
+        }
+      ]
+    },
+    {
+      "source": "/assets/(.*).css",
+      "headers": [
+        {
+          "key": "Content-Type",
+          "value": "text/css"
+        }
+      ]
+    },
+    {
       "source": "/assets/(.*)",
       "headers": [
         {
