--- a/vercel.json
+++ b/vercel.json
@@ -1,4 +1,8 @@
 {
+  "rewrites": [
+    { "source": "/sitemap.xml", "destination": "/api/generateSitemap" },
+    { "source": "/(.*)", "destination": "/" }
+  ],
   "functions": {
     "api/generateSitemap.ts": {
       "memory": 1024
