--- a/package.json
+++ b/package.json
@@ -46,8 +46,6 @@
     "react-share": "^5.1.0",
     "react-toastify": "^10.0.5",
     "tailwind-merge": "^2.2.2",
-    "vite-bundle-visualizer": "^1.2.1",
-    "vite-plugin-inspect": "^0.8.7",
     "vite-plugin-svgr": "^4.2.0",
     "vite-tsconfig-paths": "^4.3.2",
     "yup": "^1.4.0"
@@ -76,9 +74,7 @@
     "tailwindcss": "^3.4.4",
     "typescript": "5.5.4",
     "vite": "^5.2.0",
-    "vite-plugin-compression": "^0.5.1",
     "vite-plugin-copy": "^0.1.6",
-    "vite-plugin-html": "^3.2.2",
-    "vite-plugin-sitemap": "^0.7.1"
+    "vite-plugin-html": "^3.2.2"
   }
 }
