--- a/package.json
+++ b/package.json
@@ -27,10 +27,14 @@
     "@hookform/resolvers": "^3.3.4",
     "@tanstack/react-query": "^5.59.15",
     "@tinymce/tinymce-react": "^5.1.1",
+    "@types/express": "^5.0.0",
+    "@types/node": "^22.8.2",
     "@vercel/functions": "^1.4.2",
+    "@vercel/node": "^3.2.23",
     "audit-ci": "^6.6.1",
     "axios": "^1.7.2",
     "classnames": "^2.5.1",
+    "express": "^4.21.1",
     "react": "^18.3.1",
     "react-alice-carousel": "^2.9.1",
     "react-calendly": "^4.3.0",
