--- a/package.json
+++ b/package.json
@@ -32,6 +32,7 @@
     "classnames": "^2.5.1",
     "next": "^15.2.3",
     "next-nprogress-bar": "^2.3.15",
+    "nodemailer": "^6.9.8",
     "react": "^18.3.1",
     "react-alice-carousel": "^2.9.1",
     "react-calendly": "^4.3.1",
@@ -58,6 +59,7 @@
     "@trivago/prettier-plugin-sort-imports": "^4.3.0",
     "@types/clean-css": "^4.2.11",
     "@types/node": "^20.17.6",
+    "@types/nodemailer": "^6.4.14",
     "@types/react": "^18",
     "@types/react-dom": "^18",
     "@types/react-modal": "^3.16.3",
